Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83993

qt.accessibility.core throws errors from child items created in disabled state

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.14.0, 5.14.1, 5.14.2
    • Windows 10.0.18362 AMD64
      Python: 3.8.2 AMD64
      PySide2: 5.14.2.1
    • Windows
    • UI Bug Fixing Q1/2021

    Description

      I was refactoring my user interface to make use of lazy loading a bit more.
      As it was being build I wanted to make sure the interface does not yet receive user inputs.
      Thus I was calling:

      self.setEnabled(False)

      then built all the actions, lists, fill it with list items, widgets, tabs and so on until I finally:

      self.setEnabled(True)

      the whole thing again. Worked nice in 5.13.x I think. But from 5.14.0 on there were these errors coming:

      qt.accessibility.core: Cannot create accessible child interface for object: QTabBar(0x24f514fea20, name = "qt_tabwidget_tabbar") index: 2

      Mostly in chunks of 3 lines.

      Seems when I just create the container widgets outside of the disabled state everything is fine again.

      Parent widgets that I experienced this with:

      • QMenuBar - first is OK, from when hovering the second menu: 3 lines of errors, 3 more on click
      • QListWidget - first 3 list items are OK, from clicking the fourth 3 lines of errors then 3 more when changing away from the list item
      • QTabBar - first 2 tab widgets are OK, from clicking the third 2 lines or errors ...

      might be there is more. I put a code example for the QmenuBar into the Attachments

      Steps to reproduce:

      • (Windows) Ensure an accessibility tool or other UI Automation client, like Microsoft Narrator or Inspect is running
      • Run example

      Attachments

        1. qtbug83993.zip
          1 kB
          Friedemann Kleint
        2. pyside1279_cpp.zip
          1 kB
          Friedemann Kleint
        3. menus_demo.py
          0.8 kB
          Eric Werner
        4. fresh_py3.8_PySide2_5.14.2.1.png
          219 kB
          Eric Werner
        5. error_log_snippet.txt
          1 kB
          Eric Werner
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            smd Jan Arve
            ewerybody Eric Werner
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes